--- a/.github/workflows/generate-assets.yml
+++ b/.github/workflows/generate-assets.yml
@@ -14,16 +14,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Set up Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version: '23'
+          bun-version: latest
 
       - name: Install dependencies
-        run: npm ci
+        run: bun install
 
       - name: Run asset generation script
-        run: node generateAssets.js
+        run: bun generateAssets.js
 
       - name: Check for changes
         id: git_status
